DD-19: Upgrade packages versions. Update GitHub actions.

--- a/app/pom.xml
+++ b/app/pom.xml
@@ -238,6 +238,95 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>release-local</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jreleaser</groupId>
+                        <artifactId>jreleaser-maven-plugin</artifactId>
+                        <version>${jreleaser.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>config</goal>
+                                    <goal>assemble</goal>
+<!--                                    <goal>package</goal>-->
+                                </goals>
+                                <configuration>
+                                    <jreleaser>
+                                        <assemble>
+                                            <jlink>
+                                                <drd-app-jlink>
+                                                    <active>RELEASE</active>
+                                                    <imageName>${project.parent.artifactId}-${project.version}</imageName>
+                                                    <executable>${project.parent.artifactId}</executable>
+                                                    <exported>false</exported>
+                                                    <mainJar>
+                                                        <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>
+                                                    </mainJar>
+                                                    <moduleNames>
+                                                        <moduleName>java.base</moduleName>
+                                                        <moduleName>java.desktop</moduleName>
+                                                        <moduleName>java.instrument</moduleName>
+                                                        <moduleName>java.management</moduleName>
+                                                        <moduleName>java.prefs</moduleName>
+                                                        <moduleName>java.rmi</moduleName>
+                                                        <moduleName>java.scripting</moduleName>
+                                                        <moduleName>java.security.jgss</moduleName>
+                                                        <moduleName>java.sql.rowset</moduleName>
+                                                        <moduleName>jdk.attach</moduleName>
+                                                        <moduleName>jdk.httpserver</moduleName>
+                                                        <moduleName>jdk.jdi</moduleName>
+                                                        <moduleName>jdk.jfr</moduleName>
+                                                        <moduleName>jdk.unsupported</moduleName>
+                                                    </moduleNames>
+                                                </drd-app-jlink>
+                                            </jlink>
+<!--                                            <jpackage>-->
+<!--                                                <drd-app>-->
+<!--                                                    <active>RELEASE</active>-->
+<!--                                                    <jlink>drd-app-jlink</jlink>-->
+<!--                                                    <vendor>masci-cz</vendor>-->
+<!--                                                    <mainJar>-->
+<!--                                                        <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>-->
+<!--                                                    </mainJar>-->
+<!--                                                </drd-app>-->
+<!--                                            </jpackage>-->
+                                            <jpackage>
+                                                <app>
+                                                    <active>RELEASE</active>
+                                                    <imageName>${project.parent.artifactId}-${project.version}</imageName>
+                                                    <executable>${project.parent.artifactId}</executable>
+                                                    <exported>true</exported>
+                                                    <jlink>drd-app-jlink</jlink>
+                                                    <windows>
+                                                        <types>exe</types>
+                                                    </windows>
+                                                </app>
+                                            </jpackage>
+                                        </assemble>
+<!--                                        <distributions>-->
+<!--                                            <drd-app>-->
+<!--                                                <active>RELEASE</active>-->
+<!--                                                <type>NATIVE_PACKAGE</type>-->
+<!--                                                <artifacts>-->
+<!--                                                    <artifact>-->
+<!--                                                        <path>{{ assembleDirectory }}/{{ distributionName }}/jlink/${project.parent.artifactId}-${project.version}-windows-x86_64.zip</path>-->
+<!--                                                        <platform>windows</platform>-->
+<!--                                                    </artifact>-->
+<!--                                                </artifacts>-->
+<!--                                            </drd-app>-->
+<!--                                        </distributions>-->
+                                    </jreleaser>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
     
 </project>
