--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -3,56 +3,23 @@
 
 name: Verify Workflow
 
-on:
-  pull_request:
-    branches: [ master ]
+on: push
 
 jobs:
-  version:
-    name: Version Job
-    runs-on: ubuntu-latest
-    outputs:
-      version: ${{ steps.gitversion.outputs.version }}
-      previous-version: ${{ steps.gitversion.outputs.previous-version }}
-      
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.head_ref }}   # checkout the correct branch name
-          fetch-depth: 0                # fetch the whole repo history
-
-      - name: Git Version
-        id: gitversion
-        uses: codacy/git-version@2.2.0
-
-      - name: Display GitVersion outputs
-        run: |
-          echo "Version: ${{ steps.gitversion.outputs.version }}"
-          echo "Previous Version: ${{ steps.gitversion.outputs.previous-version }}"
-          
   verify:
     name: Verify Job
     runs-on: ubuntu-latest
-    needs: version
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       
-    - name: Set up JDK 16
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '16'
-        distribution: 'adopt'
+        java-version: '17'
+        distribution: 'temurin'
+        cache: 'maven'
 
-    - name: Cache local Maven repository
-      uses: actions/cache@v2
-      with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-      
     - name: Verify with Maven
-      run: mvn -B verify -Drevision=${{ needs.version.outputs.version}} --file pom.xml
+      run: mvn -B verify -Drevision=1.0.0-SNAPSHOT --file pom.xml
