--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@ local.properties
 ######################
 /log/
 /target/
+/**/target
 
 ######################
 # Gradle
@@ -139,3 +140,16 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+# Testing database
+/drd-db
+
+# NetBeans
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
