--- a/springfx-data/pom.xml
+++ b/springfx-data/pom.xml
@@ -15,28 +15,15 @@
   <description>Spring FX data and services</description>
     
   <dependencies>
-    <!-- open jfx: win -->
+    <!-- open jfx -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <classifier>win</classifier>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-base</artifactId>
-      <classifier>win</classifier>
     </dependency>
     
-    <!-- open jfx: linux -->
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-controls</artifactId>
-      <classifier>linux</classifier>
-    </dependency>
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-base</artifactId>
-      <classifier>linux</classifier>
-    </dependency>
   </dependencies>
 </project>
