--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@
 
 name: Release Workflow
 
-on:
-  workflow_dispatch:
+on: push
+#  workflow_dispatch:
 
 jobs:
   version:
@@ -59,7 +59,7 @@ jobs:
         JRELEASER_GPG_PASSPHRASE: ${{ secrets.GPG_SECRET_KEY_PASSWORD }}
         JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
         JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
-      run: mvn -B deploy -Passemble -Prelease -Drevision=${{ needs.version.outputs.version}} --file pom.xml
+      run: mvn -B deploy -Passemble -Prelease -Drevision=${{ needs.version.outputs.version}} --file pom.xml -Djreleaser.dry.run=true
 
     - name: Display JReleaser output
       run: |
