--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    
+
     <parent>
         <groupId>cz.masci.drd</groupId>
         <artifactId>drd-application</artifactId>
         <version>${revision}</version>
     </parent>
-    
-    <groupId>cz.masci.drd</groupId>
+
     <artifactId>app</artifactId>
     <version>${revision}</version>
+
     <name>DrD: Application</name>
     <description>DrD Application</description>
-        
+
     <properties>
+        <appName>drd-app</appName>
+        <jreleaser.signing.mode>MEMORY</jreleaser.signing.mode>
     </properties>
-        
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,7 +37,7 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
-        
+
         <dependency>
             <groupId>net.rgielen</groupId>
             <artifactId>javafx-weaver-spring-boot-starter</artifactId>
@@ -62,7 +64,7 @@
             <groupId>cz.masci.drd</groupId>
             <artifactId>ui</artifactId>
         </dependency>
-        
+
         <!-- Tests -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -117,123 +119,13 @@
                     <!-- This is an app, so we don't want to install it in the local Maven repository -->
                     <skip>true</skip>
                 </configuration>
-            </plugin>        
+            </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
-            <id>release</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.jreleaser</groupId>
-                        <artifactId>jdks-maven-plugin</artifactId>
-                        <version>${jreleaser.version}</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>setup-jdks</goal>
-                                </goals>
-                                <configuration>
-                                    <jdks>
-                                        <jdk>
-                                            <name>adopt16Windows</name>
-                                            <platform>windows</platform>
-                                            <url>https://github.com/AdoptOpenJDK/openjdk16-binaries/releases/download/jdk-16.0.1%2B9/OpenJDK16U-jdk_x64_windows_hotspot_16.0.1_9.zip</url>
-                                            <checksum>0a91e179c4d34b5d905fd2945a21927a6acb798b4e8f2d528ece32c025bbcaff</checksum>
-                                        </jdk>
-                                    </jdks>
-                                </configuration>                                                        
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.jreleaser</groupId>
-                        <artifactId>jreleaser-maven-plugin</artifactId>
-                        <version>${jreleaser.version}</version>
-                        <executions>
-                            <execution>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>config</goal>
-                                    <goal>assemble</goal>
-                                    <goal>full-release</goal>
-                                </goals>
-                                <configuration>
-                                    <jreleaser>
-                                        <release>
-                                            <github>
-                                                <tagName>${project.version}</tagName>
-                                                <releaseName>Release v${project.version}</releaseName>
-                                            </github>
-                                        </release>
-                                        <assemble>
-                                            <jlink>
-                                                <drd-app>
-                                                    <active>RELEASE</active>
-                                                    <imageName>${project.parent.artifactId}-${project.version}</imageName>
-                                                    <executable>${project.parent.artifactId}</executable>
-                                                    <exported>false</exported>
-                                                    <mainJar>
-                                                        <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>
-                                                    </mainJar>
-                                                    <moduleNames>
-                                                        <moduleName>java.base</moduleName>
-                                                        <moduleName>java.desktop</moduleName>
-                                                        <moduleName>java.instrument</moduleName>
-                                                        <moduleName>java.management</moduleName>
-                                                        <moduleName>java.prefs</moduleName>
-                                                        <moduleName>java.rmi</moduleName>
-                                                        <moduleName>java.scripting</moduleName>
-                                                        <moduleName>java.security.jgss</moduleName>
-                                                        <moduleName>java.sql.rowset</moduleName>
-                                                        <moduleName>jdk.attach</moduleName>
-                                                        <moduleName>jdk.httpserver</moduleName>
-                                                        <moduleName>jdk.jdi</moduleName>
-                                                        <moduleName>jdk.jfr</moduleName>
-                                                        <moduleName>jdk.unsupported</moduleName>
-                                                    </moduleNames>
-                                                    <targetJdks>
-                                                        <targetJdk>
-                                                            <path>{{ Env.JAVA_HOME }}</path>
-                                                            <platform>linux</platform>
-                                                        </targetJdk>
-                                                        <targetJdk>
-                                                            <path>${project.build.directory}/jdks/jdk-16.0.1+9</path>
-                                                            <platform>windows</platform>
-                                                        </targetJdk>
-                                                    </targetJdks>
-                                                </drd-app>
-                                            </jlink>
-                                        </assemble>
-                                        <distributions>
-                                            <drd-app>
-                                                <active>RELEASE</active>
-                                                <type>JLINK</type>
-                                                <artifacts>
-                                                    <artifact>
-                                                        <path>{{ assembleDirectory }}/{{ distributionName }}/jlink/${project.parent.artifactId}-${project.version}-linux.zip</path>
-                                                        <platform>linux</platform>
-                                                    </artifact>
-                                                    <artifact>
-                                                        <path>{{ assembleDirectory }}/{{ distributionName }}/jlink/${project.parent.artifactId}-${project.version}-windows.zip</path>
-                                                        <platform>windows</platform>
-                                                    </artifact>
-                                                </artifacts>
-                                            </drd-app>
-                                        </distributions>
-                                    </jreleaser>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>release-local</id>
+            <id>assemble</id>
             <build>
                 <plugins>
                     <plugin>
@@ -244,12 +136,20 @@
                             <execution>
                                 <phase>package</phase>
                                 <goals>
-                                    <goal>config</goal>
                                     <goal>assemble</goal>
-<!--                                    <goal>package</goal>-->
                                 </goals>
                                 <configuration>
                                     <jreleaser>
+                                        <environment>
+                                            <properties>
+                                                <executableJarFile>${project.parent.artifactId}-${project.version}-exec.jar</executableJarFile>
+                                            </properties>
+                                        </environment>
+                                        <project>
+                                            <java>
+                                                <mainClass>cz.masci.drd.app.SpringApplication</mainClass>
+                                            </java>
+                                        </project>
                                         <assemble>
                                             <jlink>
                                                 <drd-app-jlink>
@@ -260,6 +160,7 @@
                                                     <mainJar>
                                                         <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>
                                                     </mainJar>
+                                                    <templateDirectory>app/src/jreleaser/assemblers/drd-app-jlink/jlink</templateDirectory>
                                                     <moduleNames>
                                                         <moduleName>java.base</moduleName>
                                                         <moduleName>java.desktop</moduleName>
@@ -278,41 +179,84 @@
                                                     </moduleNames>
                                                 </drd-app-jlink>
                                             </jlink>
-<!--                                            <jpackage>-->
-<!--                                                <drd-app>-->
-<!--                                                    <active>RELEASE</active>-->
-<!--                                                    <jlink>drd-app-jlink</jlink>-->
-<!--                                                    <vendor>masci-cz</vendor>-->
-<!--                                                    <mainJar>-->
-<!--                                                        <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>-->
-<!--                                                    </mainJar>-->
-<!--                                                </drd-app>-->
-<!--                                            </jpackage>-->
                                             <jpackage>
-                                                <app>
+                                                <drd-app>
                                                     <active>RELEASE</active>
-                                                    <imageName>${project.parent.artifactId}-${project.version}</imageName>
-                                                    <executable>${project.parent.artifactId}</executable>
-                                                    <exported>true</exported>
                                                     <jlink>drd-app-jlink</jlink>
+                                                    <mainJar>
+                                                        <path>${project.build.directory}/dist/${project.parent.artifactId}-${project.version}-exec.jar</path>
+                                                    </mainJar>
+                                                    <applicationPackage>
+                                                        <appName>${appName}</appName>
+                                                        <vendor>MASCI</vendor>
+                                                        <appVersion>${project.parent.version}</appVersion>
+                                                    </applicationPackage>
+                                                    <linux>
+                                                        <types>deb,rpm</types>
+                                                        <maintainer>daniel@masci.cz</maintainer>
+                                                    </linux>
                                                     <windows>
-                                                        <types>exe</types>
+                                                        <types>msi</types>
+                                                        <appName>${appName}</appName>
+                                                        <installDir>${appName}</installDir>
+                                                        <dirChooser>true</dirChooser>
+                                                        <console>true</console>
+                                                        <menu>true</menu>
                                                     </windows>
-                                                </app>
+                                                    <launcher>
+                                                        <launchers>
+                                                            <launcher>drd=drd.properties</launcher>
+                                                        </launchers>
+                                                    </launcher>
+                                                </drd-app>
                                             </jpackage>
                                         </assemble>
-<!--                                        <distributions>-->
-<!--                                            <drd-app>-->
-<!--                                                <active>RELEASE</active>-->
-<!--                                                <type>NATIVE_PACKAGE</type>-->
-<!--                                                <artifacts>-->
-<!--                                                    <artifact>-->
-<!--                                                        <path>{{ assembleDirectory }}/{{ distributionName }}/jlink/${project.parent.artifactId}-${project.version}-windows-x86_64.zip</path>-->
-<!--                                                        <platform>windows</platform>-->
-<!--                                                    </artifact>-->
-<!--                                                </artifacts>-->
-<!--                                            </drd-app>-->
-<!--                                        </distributions>-->
+                                    </jreleaser>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.jreleaser</groupId>
+                        <artifactId>jreleaser-maven-plugin</artifactId>
+                        <version>${jreleaser.version}</version>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>release</goal>
+                                </goals>
+                                <configuration>
+                                    <jreleaser>
+                                        <project>
+                                            <java>
+                                                <mainClass>cz.masci.drd.app.SpringApplication</mainClass>
+                                            </java>
+                                        </project>
+                                        <checksum>
+                                            <individual>true</individual>
+                                            <name>checksums_${os.name}</name>
+                                        </checksum>
+                                        <signing>
+                                            <active>RELEASE</active>
+                                            <mode>${jreleaser.signing.mode}</mode>
+                                        </signing>
+                                        <release>
+                                            <github>
+                                                <tagName>${project.version}</tagName>
+                                                <releaseName>Release v${project.version}</releaseName>
+                                                <update>
+                                                    <enabled>true</enabled>
+                                                </update>
+                                            </github>
+                                        </release>
                                     </jreleaser>
                                 </configuration>
                             </execution>
@@ -322,5 +266,5 @@
             </build>
         </profile>
     </profiles>
-    
+
 </project>
