--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -59,7 +59,7 @@ jobs:
         JRELEASER_GPG_PASSPHRASE: ${{ secrets.GPG_SECRET_KEY_PASSWORD }}
         JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
         JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
-      run: mvn -B deploy -Passemble -Prelease -Drevision=1.0.0 --file pom.xml -Djreleaser.dry.run=true -Djreleaser.signing.mode=MEMORY
+      run: mvn -B deploy -Passemble -Prelease -Drevision="1.0.0" --file pom.xml -Djreleaser.dry.run=true -Djreleaser.signing.mode=MEMORY
 
     - name: Display JReleaser output
       run: |
