--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
         JRELEASER_GPG_PUBLIC_KEY: ${{ secrets.GPG_PUBLIC_KEY }}
         JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
       run: |
-        echo %JRELEASER_GPG_PUBLIC_KEY
+        echo $JRELEASER_GPG_PUBLIC_KEY
         mvn -B deploy -Passemble -Prelease -Drevision="1.0.0" --file pom.xml "-Djreleaser.dry.run=true" "-Djreleaser.signing.mode=MEMORY"
 
     - name: Display JReleaser output
