--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,8 +61,9 @@ jobs:
         JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
       run: |
         echo $JRELEASER_GPG_PUBLIC_KEY
-        mvn -B deploy -Passemble -Prelease -Drevision="1.0.0" --file pom.xml "-Djreleaser.dry.run=true" "-Djreleaser.signing.mode=MEMORY"
+        mvn -B deploy -Passemble -Prelease -Drevision="1.0.0" --file pom.xml "-Djreleaser.dry.run=true"
 
     - name: Display JReleaser output
       run: |
-        cat target/jreleaser/trace.log
+        ls
+        cat app/target/jreleaser/trace.log
