DD-19: Upgrade spring boot to 3.0

--- a/persistence/src/test/resources/application.yaml
+++ b/persistence/src/test/resources/application.yaml
@@ -4,7 +4,7 @@ spring:
     web-application-type: none
 
   datasource:
-    url: jdbc:derby:memory:SA;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE
+    url: jdbc:derby:memory:SA;DB_CLOSE_DELAY=-1;DATABASE_TO_LOWER=TRUE;create=true
     username: SA
     
   jpa:
