--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.7.5</version>
+        <version>3.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -139,6 +139,7 @@
                 <version>${org.mapstruct.version}</version>
             </dependency>
 
+            <!-- javafx dependencies -->
             <dependency>
                 <groupId>net.rgielen</groupId>
                 <artifactId>javafx-weaver-spring-boot-starter</artifactId>
@@ -171,6 +172,7 @@
                 <version>${controlsfx.version}</version>
             </dependency>
 
+            <!-- flywaydb dependencies -->
             <dependency>
                 <groupId>org.flywaydb.flyway-test-extensions</groupId>
                 <artifactId>flyway-spring5-test</artifactId>
