--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,8 @@
 
 name: Release Workflow
 
-on: push
-#  workflow_dispatch:
+on:
+  workflow_dispatch:
 
 jobs:
   version:
@@ -61,7 +61,7 @@ jobs:
         JRELEASER_GPG_SECRET_KEY: ${{ secrets.GPG_SECRET_KEY }}
       run: |
         echo $JRELEASER_GPG_PUBLIC_KEY
-        mvn -B deploy -Passemble -Prelease -Drevision="1.0.0" --file pom.xml "-Djreleaser.dry.run=true"
+        mvn -B deploy -Passemble -Prelease -Drevision=${{ needs.version.outputs.version}} --file pom.xml
 
     - name: Display JReleaser output
       run: |
